--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "d3": "^7.8.5",
     "vue": "^3.2.13"
   },
   "devDependencies": {
+    "@rollup/plugin-dsv": "^3.0.4",
+    "@types/d3": "^7.4.3",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
